<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dark_blue_magenta"
    android:scrollbars="none"
    tools:context=".MovieDetailsActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/margin_left"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="@dimen/space_4x" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/margin_right"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_end="@dimen/space_4x" />

        <ImageView
            android:id="@+id/movie_poster"
            android:layout_width="@dimen/space_0x"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:baselineAlignBottom="true"
            android:contentDescription="@string/content_description_empty"
            app:layout_constraintBaseline_toBaselineOf="@+id/movie_title"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/img_movie_poster" />

        <View
            android:layout_width="@dimen/space_0x"
            android:layout_height="@dimen/space_0x"
            android:background="@drawable/mask_img_movie_poster"
            app:layout_constraintBottom_toBottomOf="@+id/movie_poster"
            app:layout_constraintEnd_toEndOf="@+id/movie_poster"
            app:layout_constraintStart_toStartOf="@+id/movie_poster"
            app:layout_constraintTop_toTopOf="@+id/movie_poster" />

        <ImageView
            android:id="@+id/back_button_img"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_14x"
            android:contentDescription="@string/content_description_empty"
            app:layout_constraintStart_toEndOf="@id/margin_left"
            app:layout_constraintTop_toTopOf="@id/movie_poster"
            app:srcCompat="@drawable/ic_path"
            app:tint="@color/light_grayish_navy" />

        <TextView
            android:id="@+id/back_button_text"
            style="@style/backButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/space_2x"
            android:text="@string/back_button"
            app:layout_constraintBottom_toBottomOf="@id/back_button_img"
            app:layout_constraintStart_toEndOf="@id/back_button_img"
            app:layout_constraintTop_toTopOf="@id/back_button_img" />

        <TextView
            style="@style/movieRating"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/space_0x"
            android:background="@drawable/mask_txt_rating"
            android:elevation="@dimen/space_2x"
            android:gravity="center"
            android:padding="1dp"
            android:text="@string/movie_rating"
            app:layout_constraintBottom_toTopOf="@+id/movie_title"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintStart_toStartOf="@id/margin_left" />

        <TextView
            android:id="@+id/movie_title"
            style="@style/movieTitle"
            android:layout_width="@dimen/space_0x"
            android:layout_height="wrap_content"
            android:text="@string/movie_title"
            app:layout_constraintEnd_toEndOf="@id/margin_right"
            app:layout_constraintStart_toStartOf="@id/margin_left"
            app:layout_constraintTop_toBottomOf="@id/movie_poster" />

        <TextView
            android:id="@+id/genre"
            style="@style/movieGenre"
            android:layout_width="@dimen/space_0x"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_1x"
            android:text="@string/movie_genre"
            app:layout_constraintEnd_toEndOf="@id/margin_right"
            app:layout_constraintStart_toStartOf="@id/margin_left"
            app:layout_constraintTop_toBottomOf="@id/movie_title" />

        <androidx.constraintlayout.widget.Barrier
            android:id="@+id/rating_barrier_bottom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:barrierDirection="bottom"
            app:constraint_referenced_ids="star_1, star_2, star_3, star_4, star_5" />

        <ImageView
            android:id="@+id/star_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:baselineAlignBottom="true"
            android:contentDescription="@string/content_description_empty"
            app:layout_constraintBaseline_toBaselineOf="@+id/review_count"
            app:layout_constraintEnd_toStartOf="@id/star_2"
            app:layout_constraintStart_toEndOf="@id/margin_left"
            app:srcCompat="@drawable/ic_star_icon"
            app:tint="@color/radial_red" />

        <ImageView
            android:id="@+id/star_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/space_1x"
            android:baselineAlignBottom="true"
            android:contentDescription="@string/content_description_empty"
            app:layout_constraintBaseline_toBaselineOf="@+id/review_count"
            app:layout_constraintEnd_toStartOf="@id/star_3"
            app:layout_constraintStart_toEndOf="@id/star_1"
            app:srcCompat="@drawable/ic_star_icon"
            app:tint="@color/radial_red" />

        <ImageView
            android:id="@+id/star_3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/space_1x"
            android:baselineAlignBottom="true"
            android:contentDescription="@string/content_description_empty"
            app:layout_constraintBaseline_toBaselineOf="@+id/review_count"
            app:layout_constraintEnd_toStartOf="@id/star_4"
            app:layout_constraintStart_toEndOf="@id/star_2"
            app:srcCompat="@drawable/ic_star_icon"
            app:tint="@color/radial_red" />

        <ImageView
            android:id="@+id/star_4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/space_1x"
            android:baselineAlignBottom="true"
            android:contentDescription="@string/content_description_empty"
            app:layout_constraintBaseline_toBaselineOf="@+id/review_count"
            app:layout_constraintEnd_toStartOf="@id/star_5"
            app:layout_constraintStart_toEndOf="@id/star_3"
            app:srcCompat="@drawable/ic_star_icon"
            app:tint="@color/radial_red" />

        <ImageView
            android:id="@+id/star_5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/space_1x"
            android:baselineAlignBottom="true"
            android:contentDescription="@string/content_description_empty"
            app:layout_constraintBaseline_toBaselineOf="@+id/review_count"
            app:layout_constraintStart_toEndOf="@id/star_4"
            app:srcCompat="@drawable/ic_star_icon"
            app:tint="@color/light_grayish_navy" />

        <TextView
            android:id="@+id/review_count"
            style="@style/movieReviewCount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/space_1x"
            android:layout_marginTop="@dimen/space_1x"
            android:text="@string/movie_reviews"
            android:textAllCaps="true"
            app:layout_constraintStart_toEndOf="@id/star_5"
            app:layout_constraintTop_toBottomOf="@id/genre" />

        <TextView
            android:id="@+id/storyline"
            style="@style/movieStorylineHeading"
            android:layout_width="@dimen/space_0x"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_6x"
            android:text="@string/movie_storyline"
            app:layout_constraintBottom_toTopOf="@id/storyline_description"
            app:layout_constraintEnd_toStartOf="@id/margin_right"
            app:layout_constraintStart_toStartOf="@id/margin_left"
            app:layout_constraintTop_toBottomOf="@id/rating_barrier_bottom" />


        <TextView
            android:id="@+id/storyline_description"
            style="@style/movieStorylineDescription"
            android:layout_width="@dimen/space_0x"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_2x"
            android:text="@string/movie_description"
            app:layout_constraintBottom_toTopOf="@id/cast"
            app:layout_constraintEnd_toStartOf="@id/margin_right"
            app:layout_constraintStart_toStartOf="@id/margin_left"
            app:layout_constraintTop_toBottomOf="@id/storyline" />

        <TextView
            android:id="@+id/cast"
            style="@style/movieCastHeading"
            android:layout_width="@dimen/space_0x"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_6x"
            android:layout_marginBottom="@dimen/space_2x"
            android:text="@string/movie_cast"
            app:layout_constraintBottom_toTopOf="@+id/cast_barrier_top"
            app:layout_constraintEnd_toStartOf="@id/margin_right"
            app:layout_constraintStart_toStartOf="@id/margin_left"
            app:layout_constraintTop_toBottomOf="@id/storyline_description" />

        <androidx.constraintlayout.widget.Barrier
            android:id="@+id/cast_barrier_top"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:barrierDirection="top"
            app:constraint_referenced_ids="img_actor_1, img_actor_2, img_actor_3, img_actor_4" />

        <ImageView
            android:id="@+id/img_actor_1"
            android:layout_width="@dimen/space_0x"
            android:layout_height="@dimen/space_0x"
            android:contentDescription="@string/content_description_empty"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintEnd_toStartOf="@id/img_actor_2"
            app:layout_constraintStart_toStartOf="@id/margin_left"
            app:layout_constraintTop_toBottomOf="@id/cast_barrier_top"
            app:srcCompat="@drawable/img_robert_downey_jr" />

        <ImageView
            android:id="@+id/img_actor_2"
            android:layout_width="@dimen/space_0x"
            android:layout_height="@dimen/space_0x"
            android:layout_marginStart="@dimen/space_2x"
            android:contentDescription="@string/content_description_empty"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintEnd_toStartOf="@id/img_actor_3"
            app:layout_constraintStart_toEndOf="@id/img_actor_1"
            app:layout_constraintTop_toBottomOf="@id/cast_barrier_top"
            app:srcCompat="@drawable/img_chris_evans" />

        <ImageView
            android:id="@+id/img_actor_3"
            android:layout_width="@dimen/space_0x"
            android:layout_height="@dimen/space_0x"
            android:layout_marginStart="@dimen/space_2x"
            android:contentDescription="@string/content_description_empty"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintEnd_toStartOf="@id/img_actor_4"
            app:layout_constraintStart_toEndOf="@id/img_actor_2"
            app:layout_constraintTop_toBottomOf="@id/cast_barrier_top"
            app:srcCompat="@drawable/img_mark_ruffalo" />

        <ImageView
            android:id="@+id/img_actor_4"
            android:layout_width="@dimen/space_0x"
            android:layout_height="@dimen/space_0x"
            android:layout_marginStart="@dimen/space_2x"
            android:contentDescription="@string/content_description_empty"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintEnd_toEndOf="@id/margin_right"
            app:layout_constraintStart_toEndOf="@id/img_actor_3"
            app:layout_constraintTop_toBottomOf="@id/cast_barrier_top"
            app:srcCompat="@drawable/img_chris_hemsworth" />

        <androidx.constraintlayout.widget.Barrier
            android:id="@+id/cast_barrier_bottom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:barrierDirection="bottom"
            app:constraint_referenced_ids="img_actor_1, img_actor_2, img_actor_3, img_actor_4" />

        <TextView
            android:id="@+id/name_actor_1"
            style="@style/movieActorName"
            android:layout_width="@dimen/space_0x"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_1x"
            android:layout_marginBottom="@dimen/space_4x"
            android:text="@string/robert_downey_jr_name"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@id/img_actor_1"
            app:layout_constraintStart_toStartOf="@id/img_actor_1"
            app:layout_constraintTop_toBottomOf="@id/cast_barrier_bottom" />

        <TextView
            android:id="@+id/name_actor_2"
            style="@style/movieActorName"
            android:layout_width="@dimen/space_0x"
            android:layout_height="wrap_content"
            android:text="@string/chris_evans_name"
            app:layout_constraintBaseline_toBaselineOf="@id/name_actor_1"
            app:layout_constraintEnd_toEndOf="@id/img_actor_2"
            app:layout_constraintStart_toStartOf="@id/img_actor_2" />

        <TextView
            android:id="@+id/name_actor_3"
            style="@style/movieActorName"
            android:layout_width="@dimen/space_0x"
            android:layout_height="wrap_content"
            android:text="@string/mark_ruffalo_name"
            app:layout_constraintBaseline_toBaselineOf="@id/name_actor_1"
            app:layout_constraintEnd_toEndOf="@id/img_actor_3"
            app:layout_constraintStart_toStartOf="@id/img_actor_3" />

        <TextView
            android:id="@+id/name_actor_4"
            style="@style/movieActorName"
            android:layout_width="@dimen/space_0x"
            android:layout_height="wrap_content"
            android:text="@string/chris_hemsworth_name"
            app:layout_constraintBaseline_toBaselineOf="@id/name_actor_1"
            app:layout_constraintEnd_toEndOf="@id/img_actor_4"
            app:layout_constraintStart_toStartOf="@id/img_actor_4" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
